--- a/style.css
+++ b/style.css
@@ -2,3 +2,25 @@ h1{
     color:blue;
     text-align: center;
 }
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: #17470e;
+    overflow: hidden;
+}
+li {
+    float: left;
+}
+li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+li a:hover {
+    background-color: #555;
+    color: white;
+}
