--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html{
+    background-image: url('images/background.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 h1{
     color:blue;
     text-align: center;
