--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    font-family: 'Ubuntu', sans-serif;
 }
 h1{
     color:blue;
