--- a/style.css
+++ b/style.css
@@ -20,14 +20,51 @@ ul{
 li {
     float: left;
 }
-li a{
+li a, .dropbtn{
     display: block;
     color: white;
     text-align: center;
     padding: 8px 16px;
     text-decoration: none;
 }
-li a:hover {
+li a:hover:not(.active), .dropdown:hover:not(.active) .dropbtn {
     background-color: #555;
     color: white;
+}
+li.dropdown{
+    display: inline-block;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+.dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.dropdown-content a:hover{
+    background-color: #555;
+    color: white;
+}
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+.active{
+    background-color: cadetblue;
+    color: black;
+}
+p{
+    text-align: center;
+}
+iframe{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
