--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ h1{
     color: black;
     text-align: center;
 }
+h2{
+    text-align: center;
+}
 ul{
     list-style-type: none;
     margin: 0;
@@ -64,11 +67,15 @@ li.dropdown{
 }
 p{
     text-align: center;
+    margin-bottom: 2em;
 }
 iframe{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 720px;
+    height: 405px;
+    border: 2px solid black;
 }
 img{
     display: block;
