--- a/style.css
+++ b/style.css
@@ -8,9 +8,19 @@ html{
 h1{
     color: black;
     text-align: center;
+    font-size: 3em;
 }
 h2{
     text-align: center;
+    font-size: 2em;
+}
+h3{
+    text-align: center;
+}
+p{
+    font-size: large;
+    text-align: center;
+    margin-bottom: 2em;
 }
 ul{
     list-style-type: none;
@@ -65,9 +75,22 @@ li.dropdown{
     background-color: cadetblue;
     color: black;
 }
-p{
-    text-align: center;
-    margin-bottom: 2em;
+.column{
+    float: left;
+}
+.left{
+    width: 15%;
+}
+.middle{
+    width: 70%;
+}
+.right{
+    width: 15%;
+}
+.row:after{
+    content: "";
+    display: table;
+    clear: both;
 }
 iframe{
     display: block;
