--- a/style.css
+++ b/style.css
@@ -104,4 +104,6 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border: 2px solid black;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
 }
